<resources>
    <string name="app_name">Todo App</string>
    <string name="dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_user">Create User</string>
    <string name="user_name">User Name</string>
    <string name="add_todo">add Todo</string>
    <string name="enter_todos">Enter Todos</string>
    <string name="already_have_an_account">Already have an Account!</string>
    <string name="signout">Signout</string>
</resources>
