<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInFragment" tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">
        <EditText
                android:id="@+id/textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_textEmailAddress" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:hint="@string/password"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginLoginButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            style="@style/ButtonStyle"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_textPassword"/>
    <TextView
        android:text="@string/don_t_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"/>
    <Button
        android:text="@string/create_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginCreateUserBtn"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        style="@style/ButtonStyle"
        app:layout_constraintHorizontal_bias="0.0"/>

</android.support.constraint.ConstraintLayout>